# mk-pm

./: .gitattributes  .gitignore  README.md  TROUBLESHOOTING.md  install_dependencies.ps1  restart_backend.bat  simple_install.ps1  start_backend.bat  start_desktop.bat
.github/: copilot-instructions.md
backend/: .env.example  check_attachments.py  check_db.py  check_enum.py  init_db.py  main.py  migrate_attachments.py  migrate_chat_features.py  migrate_db.py  migrate_email_features.py  pyproject.toml  requirements.txt  start_backend.bat  test_auth.py  test_backend.py  test_login.py  test_main.py  test_server.py  test_task_creation.py
backend/app/api/routes/: auth.py  projects.py  tasks.py  users.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: attachment_service.py  email_service.py
deployment/: .env.example  FREEBSD_GCP_SETUP.md  GCP_DEPLOY.md  QUICKSTART.md  README.md  backup.sh  deploy.sh  fix-supervisor.sh  freebsd-setup.sh  nginx.conf  repair-postgres.sh  requirements-freebsd.txt  requirements-prod.txt  supervisor.ini  supervisord.conf  verify-deployment.sh
desktop/: main.py  pyproject.toml  settings.example.json  start_desktop.bat  test_app.py  test_desktop.py
desktop/src/: config.py
desktop/src/api/: client.py
desktop/src/services/: chat_export.py
desktop/src/ui/: dashboard_widget.py  kanban_board.py  login_dialog.py  main_window.py  project_list.py  project_widget.py  settings_widget.py  task_detail_dialog.py  task_dialog.py  task_widget.py
docs/: TECHNICAL_DOCUMENT.md
